tests/it/snapshots/it__fix__with_failing_http_basic_auth_integration.snap
---
source: tests/it/fix.rs
expression: logger.output()
---

Diagnosing connections to configured repositories

❌ https://github.com/fossas/doesnotexist.git

Diagnosing connection to FOSSA

✅ check fossa API connection with no auth required
❌ check fossa API connection with auth required

Errors found while checking integrations

❌ https://github.com/fossas/doesnotexist.git

Broker encountered an error while trying to connect to your git remote at 'https://github.com/fossas/doesnotexist.git'.

Broker was unable to connect to this repository. Please make sure that the authentication info and the remote are set correctly in your config.yml file.

You are using HTTP basic authentication for this remote. This method of authentication encodes the username and password as a base64 string and then passes that to git using the "http.extraHeader" parameter. To debug this, please make sure that the following commands work.

You generate the base64 encoded username and password by joining them with a ":" and then base64 encoding them. If your username was "pat" and your password was "password123", then you would base64 encode "pat:password123". For example, you can use a command like this:

echo -n "<username>:<password>" | base64

Once you have the base64 encoded username and password, use them in a command like this, replacing <REDACTED> with your base64 encoded string:

GIT_TERMINAL_PROMPT='0' GCM_INTERACTIVE='never' GIT_ASKPASS='' git -c credential.helper= -c http.extraHeader=AUTHORIZATION: Basic <REDACTED> ls-remote --quiet https://github.com/fossas/doesnotexist.git

Full error message from git:

run command: git
args: ["-c", "credential.helper=", "-c", "http.extraHeader=AUTHORIZATION: Basic <REDACTED>", "ls-remote", "--quiet", "https://github.com/fossas/doesnotexist.git"]
env: ["GIT_TERMINAL_PROMPT='0'", "GCM_INTERACTIVE='never'", "GIT_ASKPASS=<REMOVED>"]
status: 128
stdout: ''
stderr: '{git authentication or missing repo error}'



Errors found while checking connection to FOSSA

❌ Error checking connection to FOSSA: GET to fossa endpoint 'https://app.fossa.com/api/cli/organization' with authentication required

Broker received an "Unauthorized" status response from FOSSA. This can mean that the fossa_integration_key configured in your config.yml file is not correct. You can obtain a FOSSA API key by going to Settings => Integrations => API in the FOSSA application.

The URL Broker attempted to connect to was 'https://app.fossa.com/api/cli/organization'. Please make sure you can make a request to that URL. For example, try this curl command:

curl -H "Authorization: Bearer <your fossa api key>" https://app.fossa.com/api/cli/organization

Full error message: HTTP status client error (401 Unauthorized) for url (https://app.fossa.com/api/cli/organization)

Collecting debug bundle

❌ Debug bundle collection disabled.
