tests/it/snapshots/it__fix__with_failing_http_no_auth_integration_scan_unix.snap
---
source: tests/it/fix.rs
assertion_line: 101
expression: logger.output()
---
Diagnosing connection to FOSSA

✅ check fossa API connection with no auth required
❌ check fossa API connection with auth required

Diagnosing connections to configured repositories

✅ https://github.com/fossas/empty.git

Errors found while checking connection to FOSSA

❌ Error checking connection to FOSSA: GET to fossa endpoint 'https://app.fossa.com/api/cli/organization' with authentication required

Broker received an "Unauthorized" status response from FOSSA. This can mean that the fossa_integration_key configured in your config.yml file is not correct. You can obtain a FOSSA API key by going to Settings => Integrations => API in the FOSSA application.

The URL Broker attempted to connect to was 'https://app.fossa.com/api/cli/organization'. Make sure you can make a request to that URL. For example, try this curl command:

curl -H "Authorization: Bearer <your fossa api key>" https://app.fossa.com/api/cli/organization

Full error message: HTTP status client error (401 Unauthorized) for url (https://app.fossa.com/api/cli/organization)

Collecting debug bundle

❌ Debug bundle collection disabled.
